# Python-Implementation-Conways_Game_of_life

./: README.md  pyproject.toml
rplife/: views.py
